2 endpoints for company information and company users
